--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       piyushsharma0web@gmail.com
     </h4>
     <hr />
-    <a href="./about me.html">About Me</a>
+    <a href="./public/about me.html">About Me</a>
     <video controls width="1920" height="1080">
       <source src="./Assets/Chess_04.mp4" type="video/mp4" />
     </video>
