--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
       piyushsharma0web@gmail.com
     </h4>
     <hr />
-    <a href="./public/about me.html">About Me</a>
+    <a href="./public/about.html">About Me</a>
   </body>
 </html>
