--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     </h4>
     <hr />
     <a href="./public/about.html">About Me</a>
+    <a href="../Resume/index.html">Resume</a>
   </body>
 </html>
