--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <hr />
     <a href="./public/about.html">About Me</a>
     <br />
-    <a href="../Resume/index.html">Resume</a>
+    <a href="./Resume/index.html">Resume</a>
   </body>
 </html>
